--- a/src/app/views/login/index.phtml
+++ b/src/app/views/login/index.phtml
@@ -15,7 +15,11 @@
     <?php echo $this->tag->form("login/login"); ?>
     <p>
         <label for="email">E-Mail</label>
-        <?php echo $this->tag->textField("email"); ?>
+        <?php echo $this->tag->textField(["email", "value" => $mail=$this->cookies->get("email")]); ?>
+    </p>
+    <p>
+        <label for="email">Password</label>
+        <?php echo $this->tag->textField(["password","value" => $mail=$this->cookies->get("pass")]) ?>
     </p>
     <p>
         <?php echo $this->tag->submitButton("Login"); ?>
