--- a/src/app/views/signup/index.phtml
+++ b/src/app/views/signup/index.phtml
@@ -12,7 +12,14 @@
         <label for="email">E-Mail</label>
         <?php echo $this->tag->textField("email"); ?>
     </p>
-
+    <p>
+        <label for="email">Password</label>
+        <?php echo $this->tag->textField("password"); ?>
+    </p>
+    <p>
+        <label for="checkbox">Remember Me</label>
+        <?php echo $this->tag->checkField("remember") ?>
+    </p>
     <p>
         <?php echo $this->tag->submitButton("Register"); ?>
     </p>
