--- a/src/app/views/login/login.phtml
+++ b/src/app/views/login/login.phtml
@@ -2,5 +2,6 @@
 <div class="alert alert-<?php echo $success === true ? 'success' : 'danger'; ?>">
     <?php echo $message; ?>
 </div>
+<?php
 
-<?php echo $this->tag->linkTo(['/', 'Go back', 'class' => 'btn btn-primary']); ?>
+ echo $this->tag->linkTo(['/', 'Go back', 'class' => 'btn btn-primary']); ?>
